--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,31 @@ jobs:
         run: |
           curl --fail -v -H "Authorization: Bearer $(gcloud auth print-identity-token)" https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health
 
+  testing:
+    permissions:
+      id-token: write
+      contents: read
+
+    runs-on: ubuntu-20.04
+
+    steps:
+      - name: Checking out
+        uses: actions/checkout@v3
+      - name: Authenticating
+        id: auth
+        uses: google-github-actions/auth@v1
+        with:
+          workload_identity_provider: projects/642340482178/locations/global/workloadIdentityPools/github-cicd-pool/providers/github-provider
+          service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
+          token_format: access_token
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
+      - id: "invoke-service"
+        run: |
+          gcloud info
+          gcloud iam service-accounts list
+
+
   id-token-test-calling-cloud-run:
     permissions:
       id-token: write
@@ -49,15 +74,10 @@ jobs:
           token_format: id_token
           id_token_audience: https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health
           id_token_include_email: true
-#      - name: Setting up GCP environment
-#        uses: google-github-actions/setup-gcloud@v1
-#      - run: |
-#          gcloud info
-#          gcloud auth list
-#      - run: gcloud config list account --format "value(core.account)"
       - id: "invoke-service"
         run: |
-          curl --fail -v -H "Authorization: Bearer $(gcloud auth print-identity-token)" https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health
+          TOKEN=$(gcloud auth print-identity-token)
+          curl --fail -v -H "Authorization: Bearer $TOKEN" https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health
 
   access-token-test-calling-cloud-run:
     permissions:
