--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,13 +46,18 @@ jobs:
         with:
           workload_identity_provider: projects/642340482178/locations/global/workloadIdentityPools/github-cicd-pool/providers/github-provider
           service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
-          token_format: access_token
+#          token_format: access_token
+          token_format: id_token
+          id_token_audience: https://main-latest---backend-83496-btesdmljxq-ey.a.run.app
+          id_token_include_email: true
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
-      - id: "invoke-service"
-        run: |
+      - run: |
           gcloud info
           gcloud iam service-accounts list
+      - run: |
+          curl https://main-latest---backend-83496-btesdmljxq-ey.a.run.app \
+          --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
 
 
   id-token-test-calling-cloud-run:
