--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,31 @@ jobs:
         run: |
           curl --fail -v -H "Authorization: Bearer $(gcloud auth print-identity-token)" https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health
 
+
+  testing-with-main-app-audience:
+    permissions:
+      id-token: write
+      contents: read
+
+    runs-on: ubuntu-20.04
+
+    steps:
+      - name: Checking out
+        uses: actions/checkout@v3
+      - name: Authenticating
+        id: auth
+        uses: google-github-actions/auth@v1
+        with:
+          workload_identity_provider: projects/642340482178/locations/global/workloadIdentityPools/github-cicd-pool/providers/github-provider
+          service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
+          #          token_format: access_token
+          token_format: id_token
+          id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
+          id_token_include_email: true
+      - run: |
+          curl https://main-latest---backend-83496-btesdmljxq-ey.a.run.app \
+          --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
+
   testing:
     permissions:
       id-token: write
