--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
           id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
           id_token_include_email: true
       - run: |
-          curl https://main-latest---backend-83496-btesdmljxq-ey.a.run.app \
+          curl https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health \
           --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
 
   testing:
