--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,15 +135,11 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v1.0.0
         with:
-#          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
           token_format: id_token
-#          token_format: access_token
           id_token_audience: ${{ steps.deploy.outputs.url }}
-#          id_token_include_email: true
-#          create_credentials_file: false
-#          export_environment_variables: false
+          id_token_include_email: true
       - name: Testing if service is up
         run: |
           ./scripts/is-service-up.sh
