--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,11 +45,10 @@ jobs:
         id: auth
         uses: google-github-actions/auth@v1
         with:
-          workload_identity_provider: projects/642340482178/locations/global/workloadIdentityPools/github-cicd-pool/providers/github-provider
-          service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
-          #          token_format: access_token
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.CICD_SA_ID }}
           token_format: id_token
-          id_token_audience: https://backend-83496-btesdmljxq-ey.a.run.app
+          id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
           id_token_include_email: true
       - run: |
           curl https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health \
