--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,7 +46,7 @@ jobs:
         uses: google-github-actions/auth@v1
         with:
           workload_identity_provider: projects/642340482178/locations/global/workloadIdentityPools/github-cicd-pool/providers/github-provider
-          service_account: bodleian-backend-cicd@bodleian-398addce.iam.gserviceaccount.com
+          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
           #          token_format: access_token
           token_format: id_token
           id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
