--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,9 +85,9 @@ jobs:
 #      - test
 #      - security-scan-code
 
-#    permissions:
-#      id-token: write
-#      contents: read
+    permissions:
+      id-token: write
+      contents: read
 
     runs-on: ubuntu-20.04
 
