--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,5 +179,7 @@ jobs:
           id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
           id_token_include_email: true
       - run: |
-          curl https://main-latest---backend-83496-btesdmljxq-ey.a.run.app/api/health \
-          --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}"
+          curl \
+              --fail \
+              --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}" \
+              ${{ needs.build-container.outputs.service_url }}/api/health
