--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,9 +97,14 @@ jobs:
       - name: Authenticating
         uses: google-github-actions/auth@v1.0.0
         with:
+#          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+#          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
+#          token_format: "access_token"
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-          token_format: "access_token"
+          token_format: id_token
+          id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
+          id_token_include_email: true
       - name: Setting up GCP environment
         uses: google-github-actions/setup-gcloud@v1.0.0
       - name: Setting up Docker Buildx
@@ -156,30 +161,30 @@ jobs:
 ##          environment: 5922408-228c7edd-fc15-4f68-9665-a35d7df6945b
 
 
-  test-deployment:
-    needs:
-      - build-container
-
-    permissions:
-      id-token: write
-      contents: read
-
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Checking out
-        uses: actions/checkout@v3
-      - name: Authenticating
-        id: auth
-        uses: google-github-actions/auth@v1
-        with:
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-          token_format: id_token
-          id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
-          id_token_include_email: true
-      - run: |
-          curl \
-              --fail \
-              --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}" \
-              ${{ needs.build-container.outputs.service_url }}/api/health
+#  test-deployment:
+#    needs:
+#      - build-container
+#
+#    permissions:
+#      id-token: write
+#      contents: read
+#
+#    runs-on: ubuntu-20.04
+#
+#    steps:
+#      - name: Checking out
+#        uses: actions/checkout@v3
+#      - name: Authenticating
+#        id: auth
+#        uses: google-github-actions/auth@v1
+#        with:
+#          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+#          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
+#          token_format: id_token
+#          id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
+#          id_token_include_email: true
+#      - run: |
+#          curl \
+#              --fail \
+#              --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}" \
+#              ${{ needs.build-container.outputs.service_url }}/api/health
