--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,23 +136,16 @@ jobs:
           timeout: 30 # allow enough time to startup container
           no_traffic: true
           tag: main-latest
-    outputs:
-      service_url: ${{ steps.deploy.outputs.url }}
-#      - name: Authenticating
-#        id: auth
-#        uses: google-github-actions/auth@v1
-#        with:
-#          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-#          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-#          token_format: id_token
-#          id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
-#          id_token_include_email: true
-#      - name: Testing if service is up
-#        run: |
-#          ./scripts/is-service-up.sh
-#        env:
-#          BASE_URL: ${{ steps.deploy.outputs.url }}
-#          BEARER_TOKEN: ${{ steps.auth.outputs.id_token }}
+      - name: Testing if service is up
+        run: |
+          ./scripts/is-service-up.sh
+        env:
+          BASE_URL: ${{ steps.deploy.outputs.url }}
+          BEARER_TOKEN: ${{ steps.auth.outputs.id_token }}
+# Cannot do this because url contains a 'secret'
+#    outputs:
+#      service_url: ${{ steps.deploy.outputs.url }}
+
 #      - name: Run API tests
 #        uses: matt-ball/newman-action@v1.0.4
 #        with:
@@ -161,30 +154,3 @@ jobs:
 ##          environment: 5922408-228c7edd-fc15-4f68-9665-a35d7df6945b
 
 
-#  test-deployment:
-#    needs:
-#      - build-container
-#
-#    permissions:
-#      id-token: write
-#      contents: read
-#
-#    runs-on: ubuntu-20.04
-#
-#    steps:
-#      - name: Checking out
-#        uses: actions/checkout@v3
-#      - name: Authenticating
-#        id: auth
-#        uses: google-github-actions/auth@v1
-#        with:
-#          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-#          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-#          token_format: id_token
-#          id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
-#          id_token_include_email: true
-#      - run: |
-#          curl \
-#              --fail \
-#              --header "Authorization: Bearer ${{ steps.auth.outputs.id_token }}" \
-#              ${{ needs.build-container.outputs.service_url }}/api/health
