--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,8 @@ jobs:
       - name: Checking out
         uses: actions/checkout@v3
       - name: Authenticating
-        uses: google-github-actions/auth@v1.0.0
+        uses: google-github-actions/auth@v1
+        id: auth
         with:
 #          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
 #          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
@@ -106,7 +107,7 @@ jobs:
           id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
           id_token_include_email: true
       - name: Setting up GCP environment
-        uses: google-github-actions/setup-gcloud@v1.0.0
+        uses: google-github-actions/setup-gcloud@v1
       - name: Setting up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Containerizing
