--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,81 +9,80 @@ on:
 
 permissions:
   contents: read
-  # pull-requests: read
 
 env:
   CONTAINER_REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
 
 jobs:
-#  security-scan-code:
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Checking out
-#        uses: actions/checkout@v3
-#      - name: Run Snyk to check for vulnerabilities
-#        uses: snyk/actions/golang@0.3.0
-#        env:
-#          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-#      - name: Run Trivy vulnerability scanner in repo mode
-#        uses: aquasecurity/trivy-action@0.8.0
-#        with:
-#          scan-type: "fs"
-#          ignore-unfixed: false
-#          format: "table"
-#          exit-code: "1"
-#          severity: "CRITICAL"
-#
-#  qa:
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Checking out
-#        uses: actions/checkout@v3
-#      - name: Setup Go
-#        uses: actions/setup-go@v3
-#        with:
-#          go-version: "^1.17.0"
-#      - name: Lint Go code
-#        uses: golangci/golangci-lint-action@v3
-#      - name: Vet Go code
-#        run: go vet
-#      - name: Checking Dockerfile
-#        uses: hadolint/hadolint-action@v2.1.0
-#        with:
-#          verbose: true
-#      - name: Check shell scripts
-#        uses: ludeeus/action-shellcheck@1.1.0
-#        with:
-#          severity: warning
-#          scandir: './scripts'
-#
-#  test:
-#    runs-on: ubuntu-20.04
-#    steps:
-#      - name: Checking out
-#        uses: actions/checkout@v3
-#      - name: Setup Go
-#        uses: actions/setup-go@v3
-#        with:
-#          go-version: "^1.17.0"
-#      - name: Install dependencies
-#        run: go mod download
-#      - name: Testing
-#        run: go test -coverprofile=coverage.out ./...
-#      - name: Uploading coverage
-#        run: |
-#          bash <(curl -Ls https://coverage.codacy.com/get.sh) report --force-coverage-parser go -r coverage.out
-#        env:
-#          CODACY_PROJECT_NAME: bodleian-service
-#          CODACY_ORGANIZATION_PROVIDER: gh
-#          CODACY_USERNAME: ${{ github.repository_owner }}
-#          CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
+  security-scan-code:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checking out
+        uses: actions/checkout@v3
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/golang@0.3.0
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Run Trivy vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@0.8.0
+        with:
+          scan-type: "fs"
+          ignore-unfixed: false
+          format: "table"
+          exit-code: "1"
+          severity: "CRITICAL"
+
+  qa:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checking out
+        uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "^1.17.0"
+      - name: Lint Go code
+        uses: golangci/golangci-lint-action@v3
+      - name: Vet Go code
+        run: go vet
+      - name: Checking Dockerfile
+        uses: hadolint/hadolint-action@v2.1.0
+        with:
+          verbose: true
+      - name: Check shell scripts
+        uses: ludeeus/action-shellcheck@1.1.0
+        with:
+          severity: warning
+          scandir: './scripts'
+
+  test:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checking out
+        uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: "^1.17.0"
+      - name: Install dependencies
+        run: go mod download
+      - name: Testing
+        run: go test -coverprofile=coverage.out ./...
+      - name: Uploading coverage
+        run: |
+          bash <(curl -Ls https://coverage.codacy.com/get.sh) report --force-coverage-parser go -r coverage.out
+        env:
+          CODACY_PROJECT_NAME: bodleian-service
+          CODACY_ORGANIZATION_PROVIDER: gh
+          CODACY_USERNAME: ${{ github.repository_owner }}
+          CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
 
   build-container:
-#    needs:
-#      - qa
-#      - test
-#      - security-scan-code
+    needs:
+      - qa
+      - test
+      - security-scan-code
 
     permissions:
       id-token: write
@@ -98,9 +97,6 @@ jobs:
         uses: google-github-actions/auth@v1
         id: auth
         with:
-#          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-#          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-#          token_format: "access_token"
           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
           token_format: id_token
@@ -143,6 +139,9 @@ jobs:
         env:
           BASE_URL: ${{ steps.deploy.outputs.url }}
           BEARER_TOKEN: ${{ steps.auth.outputs.id_token }}
+
+
+
 # Cannot do this because url contains a 'secret'
 #    outputs:
 #      service_url: ${{ steps.deploy.outputs.url }}
