--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,36 +113,6 @@ jobs:
           ignore-unfixed: true
           vuln-type: "os,library"
           severity: "CRITICAL,HIGH"
-
-  deploy-container:
-    needs:
-      - qa
-      - test
-      - security-scan-code
-      - build-container
-
-    permissions:
-      id-token: write
-      contents: read
-
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Checking out
-        uses: actions/checkout@v3
-      - name: Authenticating
-        uses: google-github-actions/auth@v1
-        id: auth
-        with:
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.CICD_SA_EMAIL_ADDRESS }}
-          token_format: id_token
-          id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
-          id_token_include_email: true
-      - name: Setting up GCP environment
-        uses: google-github-actions/setup-gcloud@v1
-      - name: Setting up Docker Buildx
-        uses: docker/setup-buildx-action@v2
       - name: Pushing image
         id: push
         run: ./scripts/containerize.sh
@@ -152,7 +122,7 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0.10.1
         with:
-          image: ${{ env.image-name }}
+          image: ${{ env.raw-image-name }}
           service: ${{ secrets.CLOUD_RUN_SERVICE }}
           region: ${{ secrets.CLOUD_RUN_REGION }}
           timeout: 30 # allow enough time to startup container
@@ -164,7 +134,6 @@ jobs:
         env:
           BASE_URL: ${{ steps.deploy.outputs.url }}
           BEARER_TOKEN: ${{ steps.auth.outputs.id_token }}
-
 
 # Cannot do this because url contains a 'secret'
 #    outputs:
