--- a/.github/workflows/deploy-tag.yml
+++ b/.github/workflows/deploy-tag.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   deploy:
-    if: github.event.workflow_run.conclusion == 'success' && startsWith(github.event.ref, 'refs/tags/v')
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}# && startsWith(github.event.ref, 'refs/tags/v')
 
     permissions:
       id-token: write
