--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,8 +129,9 @@ jobs:
           service: ${{ secrets.CLOUD_RUN_SERVICE }}
           region: ${{ secrets.CLOUD_RUN_REGION }}
           timeout: 10 # allow enough time to startup container
-          no_traffic: ${{ startsWith(github.event.ref, 'refs/tags/v') && 'false' || 'true' }}
-          tag: ${{ startsWith(github.event.ref, 'refs/tags/v') && env.GIT_TAG || 'main-latest' }}
+          no_traffic: ${{ !startsWith(github.event.ref, 'refs/tags/v') }}
+          tag: ${{ env.git-tag }}
+#          flags: '--add-cloudsql-instances=...'
       - name: Testing if service is up
         run: |
           ./scripts/is-service-up.sh
