--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,19 +141,19 @@ jobs:
           BEARER_TOKEN: ${{ steps.auth.outputs.id_token }}
       - name: Routing traffic to new version
         if: ${{ startsWith(github.event.ref, 'refs/tags/v') }}
-        uses: google-github-actions/deploy-cloudrun@v0.10.1
-        with:
-          image: ${{ env.image-name }}
-          service: ${{ secrets.CLOUD_RUN_SERVICE }}
-          region: ${{ secrets.CLOUD_RUN_REGION }}
-          timeout: 10 # allow enough time to startup container
-          flags: "--concurrency=10 --cpu=1 --max-instances=2"
-          tag: ${{ env.git-tag }}
-          tag_traffic: "${{ env.git-tag }}=100"
+#        uses: google-github-actions/deploy-cloudrun@v0.10.1
+#        with:
+#          image: ${{ env.image-name }}
+#          service: ${{ secrets.CLOUD_RUN_SERVICE }}
+#          region: ${{ secrets.CLOUD_RUN_REGION }}
+#          timeout: 10 # allow enough time to startup container
+#          flags: "--concurrency=10 --cpu=1 --max-instances=2"
+#          tag: ${{ env.git-tag }}
+#          tag_traffic: "${{ env.git-tag }}=100"
+        run: |
+          echo "Routing full traffic to tag $git-tag"
+          gcloud run services update-traffic --region=${{ secrets.CLOUD_RUN_REGION }} ${{ secrets.CLOUD_RUN_SERVICE }} --to-tags="$git-tag=100"
 
-#        run: |
-#          echo "Routing full traffic to tag $git-tag"
-#          gcloud run services update-traffic --region=${{ secrets.CLOUD_RUN_REGION }} ${{ secrets.CLOUD_RUN_SERVICE }} --to-tags="$git-tag=100"
 #        id: release
 #        uses: google-github-actions/deploy-cloudrun@v0.10.1
 #        with:
