--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -55,6 +55,6 @@ jobs:
           notification_title: "{workflow} has {status_message}"
           message_format: "{emoji} *{workflow}* {status_message} in <{repo_url}|{repo}>"
           footer: "Linked Repo <{repo_url}|{repo}> | <{workflow_url}|View Workflow>"
-#          notify_when: "failure"
+          notify_when: "failure"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
