--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,13 +18,13 @@ jobs:
   security-scan-code:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checking out
+      - name: Checkout
         uses: actions/checkout@v3
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/golang@0.3.0
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      - name: Run Trivy vulnerability scanner in repo mode
+      - name: Run vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@0.8.0
         with:
           scan-type: "fs"
@@ -36,7 +36,7 @@ jobs:
   qa:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checking out
+      - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Go
         uses: actions/setup-go@v3
@@ -46,7 +46,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
       - name: Vet Go code
         run: go vet
-      - name: Checking Dockerfile
+      - name: Check Dockerfile
         uses: hadolint/hadolint-action@v3.0.0
         with:
           verbose: true
@@ -59,7 +59,7 @@ jobs:
   test:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checking out
+      - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Go
         uses: actions/setup-go@v3
@@ -67,9 +67,9 @@ jobs:
           go-version: "^1.17.0"
       - name: Install dependencies
         run: go mod download
-      - name: Testing
+      - name: Unit test
         run: go test -coverprofile=coverage.out ./...
-      - name: Uploading coverage
+      - name: Upload coverage
         run: |
           bash <(curl -Ls https://coverage.codacy.com/get.sh) report --force-coverage-parser go -r coverage.out
         env:
@@ -91,9 +91,9 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Checking out
+      - name: Checkout
         uses: actions/checkout@v3
-      - name: Authenticating
+      - name: Authenticate
         uses: google-github-actions/auth@v1
         id: auth
         with:
@@ -102,13 +102,13 @@ jobs:
           token_format: id_token
           id_token_audience: ${{ secrets.CLOUD_RUN_BACKEND_URL }}
           id_token_include_email: true
-      - name: Setting up GCP environment
+      - name: Set up GCP environment
         uses: google-github-actions/setup-gcloud@v1
-      - name: Setting up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Containerizing
+      - name: Build image
         run: ./scripts/containerize.sh
-      - name: Run Trivy vulnerability scanner
+      - name: Run vulnerability scanner
         uses: aquasecurity/trivy-action@0.8.0
         with:
           image-ref: ${{ env.image-name }}
@@ -117,11 +117,11 @@ jobs:
           ignore-unfixed: true
           vuln-type: "os,library"
           severity: "CRITICAL,HIGH"
-      - name: Pushing image
+      - name: Push image
         run: ./scripts/containerize.sh
         env:
           OUTPUT_MODE: push
-      - name: Deploying to Cloud Run
+      - name: Deploy
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0.10.1
         with:
@@ -133,13 +133,13 @@ jobs:
           flags: '--concurrency=1 --cpu=1 --max-instances=1'
 #          no_traffic: ${{ !startsWith(github.event.ref, 'refs/tags/v') }}
           tag: ${{ env.git-tag }}
-      - name: Testing if service is up
+      - name: Test if service is up
         run: |
           ./scripts/is-service-up.sh
         env:
           BASE_URL: ${{ steps.deploy.outputs.url }}
           BEARER_TOKEN: ${{ steps.auth.outputs.id_token }}
-      - name: Report Status
+      - name: Report failures to Slack
         uses: ravsamhq/notify-slack-action@v2
         if: always()
         with:
@@ -151,17 +151,9 @@ jobs:
           notify_when: "failure"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      - name: Routing traffic to new version
+      - name: Route traffic to new version
+        # TODO: check why using the deploy-action does not work with tags.
         if: ${{ startsWith(github.event.ref, 'refs/tags/v') }}
-#        uses: google-github-actions/deploy-cloudrun@v0.10.1
-#        with:
-#          image: ${{ env.image-name }}
-#          service: ${{ secrets.CLOUD_RUN_SERVICE }}
-#          region: ${{ secrets.CLOUD_RUN_REGION }}
-#          timeout: 10 # allow enough time to startup container
-#          flags: "--concurrency=10 --cpu=1 --max-instances=2"
-#          tag: ${{ env.git-tag }}
-#          tag_traffic: "${{ env.git-tag }}=100"
         run: |
           echo "Routing full traffic to tag $git-tag"
           gcloud run services update-traffic --region=${{ secrets.CLOUD_RUN_REGION }} ${{ secrets.CLOUD_RUN_SERVICE }} --to-tags="${{ env.git-tag }}=100"
