--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,7 +5,10 @@ on:
     branches: [main]
     tags:
       - "v*"
+    paths-ignore:
+      - '**/*md'
   workflow_dispatch:
+  
 
 permissions:
   contents: read
