--- a/.github/workflows/git-guardian-scan.yml
+++ b/.github/workflows/git-guardian-scan.yml
@@ -1,6 +1,10 @@
 name: GitGuardian scan
 
-on: [push, pull_request]
+on: 
+  push:
+    paths-ignore:
+      - '**/*md'
+  pull_request:
 
 permissions:
   contents: read
