--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,7 @@
 spring:
   jpa:
-    show-sql: true
-    #    hibernate:
-    #      ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true
-    #        generate_statistics: true
+    hibernate:
+      ddl-auto: update
     open-in-view: false
     generate-ddl: true
 
@@ -17,7 +12,7 @@ spring:
 
 logging:
   threshold:
-    console: TRACE
+    console: INFO
   level:
     org:
       hibernate:
