--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,9 +7,9 @@ updates:
       interval: "weekly"
     commit-message:
       prefix: "[dependabot-gh-actions] "
-  - package-ecosystem: "gomod"
+  - package-ecosystem: "gradle"
     directory: "/"
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: "[dependabot-gomod] "
+      prefix: "[dependabot-gradle] "
