--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,9 +24,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/golang@0.4.0
+        uses: snyk/actions/gradle@0.4.0
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+            args: --severity-threshold=high
       - name: Run vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@0.11.2
         with:
@@ -41,14 +43,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "^1.17.0"
-      - name: Lint Go code
-        uses: golangci/golangci-lint-action@v3
-      - name: Vet Go code
-        run: go vet
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      # - name: Lint Go code
+      #   uses: golangci/golangci-lint-action@v3
+      # - name: Vet Go code
+      #   run: go vet
       - name: Check Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
         with:
@@ -64,22 +65,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "^1.17.0"
-      - name: Install dependencies
-        run: go mod download
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
       - name: Unit test with coverage
-        run: go test -coverprofile=coverage.out ./...
-      - name: Upload coverage
-        run: |
-          bash <(curl -Ls https://coverage.codacy.com/get.sh) report --force-coverage-parser go -r coverage.out
-        env:
-          CODACY_PROJECT_NAME: bodleian-service
-          CODACY_ORGANIZATION_PROVIDER: gh
-          CODACY_USERNAME: ${{ github.repository_owner }}
-          CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
+        run: ./gradlew --warning-mode all cleanTest test
+      # - name: Upload coverage
+      #   run: |
+      #     bash <(curl -Ls https://coverage.codacy.com/get.sh) report --force-coverage-parser go -r coverage.out
+      #   env:
+      #     CODACY_PROJECT_NAME: bodleian-service
+      #     CODACY_ORGANIZATION_PROVIDER: gh
+      #     CODACY_USERNAME: ${{ github.repository_owner }}
+      #     CODACY_API_TOKEN: ${{ secrets.CODACY_API_TOKEN }}
 
   build-container:
     needs:
