--- a/.github/workflows/receive-pull-request.yml
+++ b/.github/workflows/receive-pull-request.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/golang@0.4.0
+        uses: snyk/actions/gradle@0.4.0
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       - name: Run vulnerability scanner in repo mode
@@ -47,43 +47,37 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "^1.17.0"
-      - name: Lint
-        uses: golangci/golangci-lint-action@v3
-      - name: Vet
-        run: go vet
-      - name: Checking Dockerfile
-        uses: hadolint/hadolint-action@v3.1.0
-        with:
-          verbose: true
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      # - name: Lint
+      #   uses: golangci/golangci-lint-action@v3
+      # - name: Vet
+      #   run: go vet
+      # - name: Checking Dockerfile
+      #   uses: hadolint/hadolint-action@v3.1.0
+      #   with:
+      #     verbose: true
 
   test:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "^1.17.0"
-      - name: Install dependencies
-        run: go mod download
-      - name: Test
-        run: go test ./...
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      # - name: Test
+      #   run: go test ./...
 
   build:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: "^1.17.0"
-      - name: Install dependencies
-        run: go mod download
-      - name: Building
-        run: go build -o bodleian-service
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      # - name: Install dependencies
+      #   run: go mod download
+      # - name: Building
+      #   run: go build -o bodleian-service
